Adding CI manual triggers - fix

--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -44,7 +44,7 @@ jobs:
           file: deepLearning.Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags:  ${{ secrets.DOCKER_HUB_USERNAME }}/deeplearning-dev:${{ RELEASE_VERSION }}
+          tags:  ${{ secrets.DOCKER_HUB_USERNAME }}/deeplearning-dev:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       - name: Image digest
