--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -21,6 +21,9 @@ jobs:
       
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      
+      - name: Make docker use build cache
+        run: docker buildx create --use
 
       - name: Cache Docker layers
         uses: actions/cache@v2
